1998-06-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/Makefile.am (gtkmarshal.c gtkmarshal.h): Pass $srcdir in
	environment to genmarshal.pl.
	(gtk.defs,gtktypebuiltins*): Add $(srcdir) where needed (in the
	rule), and removed it where not needed (in the dependencies).

	* gtk/genmarshal.pl: Look for `gtkmarshal.list' in $srcdir.

Tue Jun  9 18:44:57 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkobject.c: Removed g_object_pointer_hash, which
	was just g_direct_hash.

Mon May 25 19:54:20 1998  Owen Taylor  <otaylor@gtk.org>

	* configure.in: x_libs=, not $x_libs=. Enough said.
          (Case only hit for --disable-xshm)
	
Mon May 25 12:08:14 1998  Owen Taylor  <otaylor@gtk.org>

	* configure.in (LDFLAGS): Add to $CFLAGS and $LDFLAGS
	  when testing for X libraries, don't replace them. Because
	  the user might have specified the path to the X libraries
	  themself before running configure.

	* examples/**.c: Changed all gpointer * to gpointer
	
1998-06-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkhandlebox.h (struct _GtkHandleBox): Removed the
	fleur_cursor field.  Now the cursor is created/destroyed on demand
	by the routines that need it.

	* gtk/gtkhandlebox.c (gtk_handle_box_button_changed): 
	(gtk_handle_box_motion): The fleur cursor is created and destroyed
	only when needed.

Tue Jun  9 09:57:09 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtktypeutils.h: 
	* gtk/gtktypeutils.c: renamed the newly created gtk_enum_get_values and
	gtk_enum_set_values to gtk_type_enum_get_values and
 	gtk_type_enum_set_values respectively, since they are actually type
 	system features.

	* gtk/gtktypebuiltins_evals.c: oops, screwed the NULL termination with
	my last commit. ;)

Tue Jun  9 01:57:23 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkselection.h: 
	* gtk/gtkselection.c: new functions gtk_selection_data_copy and
	gtk_selection_data_free.

	* gtk/gtkwidget.c (gtk_widget_class_init): fixed gtk_signal_new() call